change option for vertical or horizontal

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <form>
           <h2 class="memory--settings-label">Difficulty level:</h2>
           <select id="memory--settings-grid">
-            <option value="2x3">Easy</option>
-            <option value="3x4" selected>Medium</option>
-            <option value="4x5">Hard</option>
-            <option value="5x6">Don't do it!</option>
+            <option value="4x3">| 12</option>
+            <option value="5x2">| 10</option>
+            <option value="6x3">| 18</option>
+            <option value="3x4" selected>-- 12</option>
+            <option value="4x5">-- 20</option>
+            <option value="5x6">-- 30</option>
           </select>
           <input id="memory--settings-reset" type="submit" value="Start New Game" />
         </form>
